--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
 
-        /* Navegación transparente */
         .navbar-custom {
             background-color: transparent;
             position: absolute;
@@ -71,7 +70,6 @@
             border-color: var(--white);
         }
 
-        /* Hero Section */
         .hero-section {
             background: linear-gradient(135deg, var(--black) 0%, var(--charcoal) 100%);
             min-height: 100vh;
@@ -79,6 +77,7 @@
             align-items: center;
             position: relative;
             overflow: hidden;
+            padding-top: 80px;
         }
 
         .hero-section::before {
@@ -99,7 +98,7 @@
 
         .hero-section h1 {
             color: var(--white);
-            font-size: 1.8rem;
+            font-size: 3.5rem;
             font-weight: 700;
             margin-bottom: 1.5rem;
             line-height: 1.2;
@@ -190,13 +189,53 @@
             opacity: 0.15;
         }
 
-        @media (max-width: 768px) {
+        @media (max-width: 992px) {
+            .hero-section {
+                padding: 100px 0 2rem 0;
+                min-height: auto;
+            }
+
             .hero-section h1 {
                 font-size: 2.5rem;
             }
 
             .hero-section p {
+                font-size: 1.1rem;
+            }
+
+            .hero-icon {
+                font-size: 12rem;
+                opacity: 0.1;
+            }
+        }
+
+        @media (max-width: 768px) {
+            .hero-section {
+                padding: 90px 0 1.5rem 0;
+            }
+
+            .hero-section h1 {
+                font-size: 2rem;
+                margin-bottom: 1rem;
+            }
+
+            .hero-section .subtitle {
+                font-size: 0.9rem;
+                margin-bottom: 0.75rem;
+            }
+
+            .hero-section p {
                 font-size: 1rem;
+                margin-bottom: 1.5rem;
+            }
+
+            .hero-section .btn-hero,
+            .hero-section .btn-secondary-hero {
+                padding: 0.75rem 1.5rem;
+                font-size: 1rem;
+                width: 100%;
+                margin-right: 0;
+                margin-bottom: 0.75rem;
             }
 
             .navbar-custom .nav-link {
@@ -205,10 +244,51 @@
 
             .hero-features {
                 gap: 1rem;
+                margin-top: 2rem;
+                justify-content: center;
+            }
+
+            .hero-feature-item {
+                flex-direction: column;
+                text-align: center;
+            }
+
+            .hero-feature-item i {
+                margin-right: 0;
+                margin-bottom: 0.5rem;
+                font-size: 1.5rem;
+            }
+
+            .hero-feature-item span {
+                font-size: 0.85rem;
             }
 
             .hero-icon {
-                font-size: 15rem;
+                font-size: 8rem;
+                margin-top: 2rem;
+            }
+
+            .hero-image-container {
+                display: none;
+            }
+        }
+
+        @media (max-width: 576px) {
+            .hero-section h1 {
+                font-size: 1.75rem;
+            }
+
+            .hero-section p {
+                font-size: 0.95rem;
+            }
+
+            .hero-features {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .hero-feature-item {
+                width: 100%;
             }
         }
     </style>
