--- a/index.html
+++ b/index.html
@@ -190,6 +190,10 @@
         }
 
         @media (max-width: 992px) {
+            .navbar-custom {
+                background-color: var(--black);
+            }
+
             .hero-section {
                 padding: 100px 0 2rem 0;
                 min-height: auto;
