--- a/index.html
+++ b/index.html
@@ -189,6 +189,104 @@
             opacity: 0.15;
         }
 
+        .services-section {
+            padding: 5rem 0;
+            background: linear-gradient(180deg, #f7f8fa 0%, #ffffff 100%);
+        }
+
+        .services-section .section-title {
+            text-align: center;
+            margin-bottom: 1rem;
+            color: var(--strong-blue);
+            font-weight: 800;
+            letter-spacing: 0.5px;
+        }
+
+        .services-section .section-subtitle {
+            text-align: center;
+            color: var(--charcoal);
+            opacity: 0.8;
+            max-width: 650px;
+            margin: 0 auto 3rem auto;
+        }
+
+        .service-card {
+            position: relative;
+            aspect-ratio: 4 / 3;
+            border: none;
+            border-radius: 1rem;
+            overflow: hidden;
+            background: linear-gradient(135deg, rgba(35, 25, 113, 0.9) 0%, rgba(45, 60, 230, 0.85) 60%, rgba(224, 155, 31, 0.85) 100%);
+            box-shadow: 0 20px 45px rgba(0, 0, 0, 0.12);
+            color: var(--white);
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .service-card:hover {
+            transform: translateY(-8px);
+            box-shadow: 0 30px 60px rgba(0, 0, 0, 0.16);
+        }
+
+        .service-card .card-body {
+            padding: 1.5rem;
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+        }
+
+        .service-card .badge {
+            align-self: flex-start;
+            background-color: rgba(255, 255, 255, 0.15);
+            color: var(--white);
+            border-radius: 999px;
+            padding: 0.4rem 0.9rem;
+            font-weight: 600;
+            letter-spacing: 0.5px;
+        }
+
+        .service-icon {
+            font-size: 2.5rem;
+            margin-bottom: 0.75rem;
+        }
+
+        .service-title {
+            font-size: 1.35rem;
+            font-weight: 700;
+            margin-bottom: 0.6rem;
+        }
+
+        .service-text {
+            font-size: 1rem;
+            opacity: 0.95;
+            margin-bottom: 1.25rem;
+            line-height: 1.5;
+        }
+
+        .service-footer {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-top: auto;
+            padding-top: 0.5rem;
+            border-top: 1px solid rgba(255, 255, 255, 0.2);
+        }
+
+        .service-footer span {
+            font-weight: 600;
+            color: var(--yellow);
+        }
+
+        .service-footer .btn {
+            background-color: var(--yellow);
+            color: var(--charcoal);
+            border: none;
+            font-weight: 600;
+            padding: 0.55rem 1.2rem;
+        }
+
         @media (max-width: 992px) {
             .navbar-custom {
                 background-color: var(--black);
@@ -380,6 +478,62 @@
                 </div>
                 <div class="col-lg-6 text-center mt-5 mt-lg-0 hero-image-container">
                     <i class="bi bi-heart-pulse hero-icon"></i>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Servicios a domicilio -->
+    <section id="servicios" class="services-section">
+        <div class="container">
+            <div class="row justify-content-center mb-4">
+                <div class="col-lg-10 text-center">
+                    <h2 class="section-title">Servicios Veterinarios a Domicilio</h2>
+                    <p class="section-subtitle">Llevamos la experiencia de nuestra clínica hasta la puerta de tu hogar con atención profesional, herramientas modernas y el cariño que tu mascota merece.</p>
+                </div>
+            </div>
+            <div class="row g-4">
+                <div class="col-lg-4 col-md-6">
+                    <div class="card service-card h-100">
+                        <div class="card-body">
+                            <span class="badge">Urgencias 24/7</span>
+                            <div class="service-icon"><i class="bi bi-clipboard2-pulse"></i></div>
+                            <h3 class="service-title">Consulta General y Diagnóstico</h3>
+                            <p class="service-text">Evaluamos a tu mascota en la comodidad de tu casa, con revisión completa, diagnóstico rápido y plan de tratamiento personalizado.</p>
+                            <div class="service-footer">
+                                <span>Visita programada</span>
+                                <button class="btn btn-sm">Agendar</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="card service-card h-100">
+                        <div class="card-body">
+                            <span class="badge">Seguimiento</span>
+                            <div class="service-icon"><i class="bi bi-shield-check"></i></div>
+                            <h3 class="service-title">Vacunación y Desparasitación</h3>
+                            <p class="service-text">Aplicamos esquemas de vacunación y control de parásitos sin estrés, manteniendo al día la salud preventiva de tu compañero.</p>
+                            <div class="service-footer">
+                                <span>Protocolos seguros</span>
+                                <button class="btn btn-sm">Solicitar</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="card service-card h-100">
+                        <div class="card-body">
+                            <span class="badge">Bienestar</span>
+                            <div class="service-icon"><i class="bi bi-heart-pulse-fill"></i></div>
+                            <h3 class="service-title">Cuidados Crónicos y Rehabilitación</h3>
+                            <p class="service-text">Controlamos enfermedades crónicas, administramos tratamientos y diseñamos planes de rehabilitación adaptados a cada paciente.</p>
+                            <div class="service-footer">
+                                <span>Monitoreo continuo</span>
+                                <button class="btn btn-sm">Conocer más</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
