Add images and new logo for hero section

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             width: 100%;
             max-width: 500px;
             height: auto;
-            opacity: 0.15;
+            opacity: 0.65;
             filter: brightness(0) invert(1);
         }
 
@@ -551,8 +551,8 @@
                     <div class="card service-card h-100">
                         <span class="badge">Seguimiento</span>
                         <div class="service-image-container">
-                            <img src="resources/img/service-2-primary.jpg" alt="Vacunación" class="service-image primary">
-                            <img src="resources/img/service-2-secondary.jpg" alt="Vacunación" class="service-image secondary">
+                            <img src="resources/img/vet_3.jpg" alt="Vacunación" class="service-image primary">
+                            <img src="resources/img/vet_4.jpg" alt="Vacunación" class="service-image secondary">
                         </div>
                         <div class="card-body">
                             <h3 class="service-title">Vacunación y Desparasitación</h3>
@@ -568,8 +568,8 @@
                     <div class="card service-card h-100">
                         <span class="badge">Bienestar</span>
                         <div class="service-image-container">
-                            <img src="resources/img/service-3-primary.jpg" alt="Rehabilitación" class="service-image primary">
-                            <img src="resources/img/service-3-secondary.jpg" alt="Rehabilitación" class="service-image secondary">
+                            <img src="resources/img/vet_5.jpg" alt="Rehabilitación" class="service-image primary">
+                            <img src="resources/img/vet_6.jpg" alt="Rehabilitación" class="service-image secondary">
                         </div>
                         <div class="card-body">
                             <h3 class="service-title">Cuidados Crónicos y Rehabilitación</h3>
